# ragavi

./: .gitignore  .travis.yml  CHANGELOG.rst  MANIFEST.in  README.rst  ghost.py  manifest.in  overrides.py  plotting.py  pyproject.toml  requirements.txt  setup.cfg  setup.py  test_plotting.py  tox.ini
.travis/: py2.docker  py3.docker
chaos/: __init__.py  arguments.py  exceptions.py  gains.py  gains_cubical.py  gains_quartical.py  lograg.py  plotting.py  processing.py  ragdata.py  utils.py  vis.py  widgets.py  widgets_cubical.py
chaos/tests/: conftest.py  plotting_script.py  test_arguments.py  test_processing.py  test_ragavi_gains.py  test_ragavi_vis.py
docs/source/: appendix.rst  changelog.rst  conf.py  gains.rst  index.rst  installation.rst  introduction.rst  readme.rst  utilities.rst  vis.rst
examples/: avg_example.py
ragavi/: __init__.py  arguments.py  averaging.py  bk_ant_vs_ant.py  bk_scan_vs_chunk.py  gains.py  gains_cubical.py  gains_quartical.py  lograg.py  overrides.py  plotting.py  processing.py  ragavi.py  ragdata.py  raglog.py  utils.py  vis.py  vis_utils.py  visibilities.py  widgets.py  widgets_cubical.py
ragavi/tests/: conftest.py  gain_tables  plotting_script.py  pytest.ini  test_arguments.py  test_plotting.py  test_processing.py  test_ragavi.py  test_ragavi_gains.py  test_ragavi_vis.py
ragavi/tests/files/1491291289.G0/: table.f0  table.f0i
ragavi/tests/files/1491291289.G0/ANTENNA/: table.f0
ragavi/tests/files/1491291289.G0/FIELD/: table.f0  table.f0i
ragavi/tests/files/1491291289.G0/OBSERVATION/: table.f0
ragavi/tests/files/1491291289.G0/SPECTRAL_WINDOW/: table.f0  table.f0i
tests/: plotting_script.py  test_arguments.py  test_plotting.py  test_ragavi_gains.py  test_ragavi_vis.py
