[metadata]
#check gist for reference
name = holy_chaos
version = 0.0.0
author = Lexy Andati
author_email = andatilexy@gmail.com
description = A radio astronomy gains and visibilities inspector
long_description = file: README.rst
long_description_content_type = text/rst
url = https://github.com/ratt-ru/ragavi
license = MIT
classifiers = 
    Intended Audience :: Developers
    Operating System :: OS Independent
    Programming Language :: Python :: 3.8
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Scientific/Engineering :: Astronomy


[options]
packages = 
    chaos
python_requires = >=3.6
install_requires = 
    bokeh
    dask[complete]
    dask-ms[xarray]
    datashader
    future
    matplotlib
    python-casacore
    xarray
    numpy<1.21

[options.extras_require]
cubical = cubical
quartical = 
    numcodecs
    zarr
    dask-ms @ git+https://github.com/ska-sa/dask-ms.git
all = 
    numcodecs
    zarr
    cubical
    dask-ms @ git+https://github.com/ska-sa/dask-ms.git

[options.entry_points]
console_scripts = 
    chaos-gains = chaos.gains:console
    chaos-cubical-gains = chaos.gains_cubical:console
    chaos-quartical-gains = chaos.gains_quartical:console
    chaos-vis = chaos.vis:console