[metadata]
#check gist for reference
name = holy_chaos
version = 0.0.0
author = Lexy Andati
author_email = landati@duck.com
description = A radio astronomy gains and visibilities inspector
long_description = file: README.rst
long_description_content_type = text/rst
url = https://github.com/ratt-ru/ragavi
license = MIT
classifiers = 
    Intended Audience :: Developers
    Operating System :: OS Independent
    Programming Language :: Python :: 3.8
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Scientific/Engineering :: Astronomy


[options]
packages = 
    ragavi
python_requires = >=3.6
install_requires = 
    bokeh
    dask[complete]
    dask-ms[xarray]
    datashader
    future
    matplotlib
    python-casacore
    xarray
    numpy<1.21

[options.extras_require]
cubical = cubical
quartical = 
    numcodecs
    zarr
    dask-ms @ git+https://github.com/ska-sa/dask-ms.git
all = 
    numcodecs
    zarr
    cubical
    dask-ms @ git+https://github.com/ska-sa/dask-ms.git

dev = 
    ipdb
    pytest
    nose
    numcodecs
    zarr
    cubical
    dask-ms @ git+https://github.com/ska-sa/dask-ms.git

[options.entry_points]
console_scripts = 
    ragavi-gains = ragavi.gains:console
    ragavi-cubical-gains = ragavi.gains_cubical:console[cubical]
    ragavi-quartical-gains = ragavi.gains_quartical:console[quartical]
    ragavi-vis = ragavi.vis:console